<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="4dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/tvTitulo"
        android:textAlignment="center"
        android:textSize="35sp" />

    <EditText
        android:id="@+id/etDocumento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/etDocumento"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etNombres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/etNombres"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etApellidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/etApellidos"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/etUsuario"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etContra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/etContra"
        android:inputType="textPassword"
        android:textSize="20sp" />

    <TableRow android:layout_width="match_parent" android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnRegistrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:onClick="registerUser"
            android:text="@string/btnRegistrar" />

        <Button
            android:id="@+id/btnBuscar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:text="@string/btnBuscar" />

    </TableRow>
    <TableRow android:layout_width="match_parent" android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnActualizar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:onClick="callUserList"
            android:text="@string/btnActualizar" />

        <Button
            android:id="@+id/btnLimpiar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:onClick="limpiar"
            android:text="@string/btnLimpiar" />

    </TableRow>

    <ListView
        android:id="@+id/lvLista"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>